--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-This is the Repository for the DataBase and base website to be using in CS_340 at OSU by Reese Benson, chase stubblefeild, LK Thang, and Phillip Mestas III.
+This is the repository for the final project website for CS 340 (Introduction to Databases) at Oregon State Univeristy by Reese Benson, Chase Stubblefeild, LK Thang, and Phillip Mestas III.
