--- a/Readme
+++ b/Readme
@@ -1,1 +1,3 @@
-This is the Repository for the DataBase and base website to be using in CS_340 at OSU by Reese Benson, chase stubblefeild, LK Thang, and Phillip Mestas III.
+This is the repository for the database and template website for CS_340 at OSU.
+
+Owners/contributors: Reese Benson, Chase Stubblefield, LK Thang, and Phillip Mestas III.
